--- a/css/checkbox.css
+++ b/css/checkbox.css
@@ -4,48 +4,64 @@ html, body {
 	width: 100%;
 	height: 100%;
 }
+#dashboard_div	/* Widget Size, make changes here */
+{
+	width: 100%;
+	height: 100%;
+}
+
+/* Elements Relative Size Definition */
 #left_bar
 {
-	position: absolute;
-	width: 200px;
-	height: 90%;
+	border: 0;
+	margin: 0;
+	padding: 0;
+	width: 15%;
+	border-right:none;
+	height:100%;
+	float:left;
+	align-items: center; display: -webkit-flex;
 }
 #right_bar
 {
-	position: absolute;
-	top: 0;
-	left: 200px;
-	right: 0;
-	height: 90%;
+	border: 0;
+	margin: 0;
+	padding: 0;
+	float: right;
+	width: 85%;
+	height: 100%;
 }
 #top_bar
 {
-	margin-left: auto;
-	margin-right: auto;
-	width: 100%;
 	height: 90%;
+	width: 100%;
 }
 #bottom_bar
 {
 	width: 100%;
 	height: 10%;
 }
-
 #check_box_div
 {
 	border: 0;
 	margin: 0;
 	padding: 0;
-	position: absolute;
-	top: 30%;
+	width: 100%;
 }
-
+.checkbox_group{
+	width: 100%;
+}
+.checkbox_group_title{
+	width: 100%;
+	justify-content: center; display: -webkit-flex;
+}
+.el-checkbox { margin: 8px;}
+/* ... End of Elements Size Definition */
 .tags
 {
 	vertical-align: top;
 	line-height: 1.6em;
 }
-
 .myButton {
 	background-color:#1699f7;
 	-moz-border-radius:14px;
@@ -192,7 +208,7 @@ html, body {
 }
 
 
-/* define size */
+/* Define Switch size */
 .el-switch.el-switch-sm {
   font-size: 85%;
 }
